# eggless-omelette

./: .gitignore  README.md
android/: README.md  clean.sh
bazel/: .bazelrc  README.md  WORKSPACE  deps.bzl  go.mod  requirements.txt
bazel-bzlmod/: .bazelrc  .gitignore  BUILD  Dockerfile.dev  MODULE.bazel  README.md  dev-container-common.sh  gazelle_python.yaml  go.mod  go.sum  provision-dev-container.sh  requirements.clean.txt  requirements_lock.txt
bazel-bzlmod-vcpkg/: .bazelrc  BUILD  MODULE.bazel  README.md  vcpkg.json
bazel-bzlmod/go_grpc_client/: BUILD
bazel-bzlmod/go_grpc_server/: BUILD
bazel-bzlmod/go_lib/: BUILD.bazel
bazel-bzlmod/go_server/: BUILD.bazel
bazel-bzlmod/protos/: BUILD
bazel-bzlmod/py_grpc_client/: BUILD
bazel-bzlmod/py_grpc_server/: BUILD
bazel-bzlmod/py_lib/: BUILD
bazel-bzlmod/py_server/: BUILD
bazel-bzlmod/pybind/: BUILD
bazel-conan/: .gitignore  MODULE.bazel  README.md
bazel-conan-nx/: .bazelrc  .gitignore  MODULE.bazel  README.md  conanfile.txt  go.mod  go.sum
bazel-conan-nx/cc_grpc_client/: BUILD  main.cc
bazel-conan-nx/cc_grpc_server/: BUILD  main.cc
bazel-conan-nx/cc_server/: BUILD
bazel-conan-nx/cpp_grpc_client/: BUILD
bazel-conan-nx/cpp_server/: BUILD
bazel-conan-nx/go_connectrpc_server/: BUILD.bazel  README.md  main.go
bazel-conan-nx/go_grpc_client/: BUILD  BUILD.bazel  main.go
bazel-conan-nx/go_grpc_server/: BUILD  BUILD.bazel  main.go
bazel-conan-nx/nx/: .gitignore  README.md  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
bazel-conan-nx/nx/add/: eslint.config.mjs  package.json  tsconfig.json  tsconfig.lib.json  vite.config.ts
bazel-conan-nx/nx/add/src/: Add.tsx
bazel-conan-nx/nx/protos/: buf.gen.yaml  gen.sh  package.json
bazel-conan-nx/nx/protos/src/: index.ts
bazel-conan-nx/nx/protos_connectrpc/: package.json
bazel-conan-nx/nx/react_01/: eslint.config.mjs  index.html  package.json  tsconfig.app.json  vite.config.ts
bazel-conan-nx/nx/react_01/src/: App.tsx  main.tsx
bazel-conan-nx/protos/: BUILD  Makefile  calculator.grpc.pb.cc  calculator.proto
bazel-conan-nx/protos/gen_cc/: BUILD  calculator.pb.cc  calculator.pb.h
bazel-conan-nx/protos/gen_go/: BUILD.bazel  calculator.pb.go  calculator_grpc.pb.go
bazel-conan-nx/protos/gen_go/gen_go_connect/: BUILD.bazel  calculator.connect.go
bazel-conan/cpp_grpc_server/: BUILD
bazel-conan/protos/: BUILD  calculator.grpc.pb.h  calculator.pb.cc
bazel-vcpkg/: BUILD  README.md  cc_grpc.bzl  vcpkg.json
bazel-workplace/: .bazelrc  README.md
chroot/: busybox.Dockerfile  main.sh
chroot-busybox/: main.sh
chroot-nix/: .gitignore  chroot.nix  main.sh
cpp/: Makefile
cpp-bazel/: Dockerfile  README.md  WORKSPACE
cpp-cmake/: CMakeLists.txt  Dockerfile  README.md
cpp-cmake/src/: main.cc
cpp-conan/: CMakeLists.txt  README.md  conanfile.txt
cpp-crow-server/: Dockerfile  README.md  WORKSPACE
cpp-makefile/: Makefile
cpp-vcpkg/: CMakeLists.txt  README.md  vcpkg.json
cpp-vcpkg/src/: main_http.cc  my_str.h
docker-compose-db/: .env  README.md  docker-compose.yml
docker-compose-https/: .gitignore  README.md  docker-compose.yml
emby/: docker-compose.yml
fastapi/: Dockerfile  README.md  main.py  requirements.txt
fastapi-spa/: .gitignore  README.md
filebrowser/: docker-compose.yml
gitea/: .env  README.md  docker-compose.yml
go-auth-jwt/: README.md  go.mod  go.sum  jwt.go  main.go  middleware.go  protectedroutes.go  routes.go  singleton.go
go-chi-server/: README.md  go.mod  main.go
go-mongodb/: README.md  go.mod  go.sum  main.go
go-oauth-client/: README.md  example.env  go.mod  google.go  main.go  schwab.go  tradestation.go  utils.go
go-server/: README.md  go.mod  main.go
go-spa/: go.mod  main.go
googletest/: README.md
grpc/: README.md
img-http/: main.py
jellyfin/: docker-compose.yml
jupyter-devbox/: .env  .gitignore  docker-compose.yml  tensorflow_cuda.dockerfile
k8s/: README.md  push-img.sh
k8s-curl-me/: Dockerfile  README.md  curl-me.yaml  push-img.sh
mongodb-atlas-go/: README.md  db.example.config  go.mod  main.go
mono/cpp/: CMakeLists.txt  README.md
mono/cpp/app/: CMakeLists.txt  main.cc
mono/cpp/utils/math/: CMakeLists.txt  add.cc  add.h  nop.h  types.h
netbird-client/: .env  docker-compose.yml
node-express-ts-mongodb/: package.json
node-express-ts-server/: README.md  package-lock.json  package.json  tsconfig.json
openproject/: docker-compose.yml
provision/: Dockerfile.dev  common-mac.sh  common.sh  dev-container.md  provision-dev-container.sh  provision-dev-server-lite.sh  provision-dev-server.sh  provision-mac.sh  provision-prod-server.sh  provision-wsl-2.sh  tmux.conf
py-uv/: .gitignore  README.md  pyproject.toml
py-uv/server/: main.py
qbittorrent/: docker-compose.yml
qemu/: QEMU_EFI.fd  README.md  create-overlay.sh  create-seed.sh  create-vm.sh  load-env-var.sh  start-vm.sh
qemu-mac/: README.md  create-overlay.sh  create-seed.sh  create-vm.sh  load-env-var.sh  start-vm.sh
react-tailwind/: README.md  index.html  package.json
react-ts/: Dockerfile  README.md  index.html  package.json  vite.config.ts
ruby-rails-minimal/: README.md  main.rb
solid-tailwind/: README.md  index.html  package.json  vite.config.ts
solid-ts/: README.md  index.html  package.json
springboot/: Dockerfile  README.md  build.gradle  settings.gradle
svelte-ts/: .gitignore  Dockerfile  README.md  package.json  rollup.config.js  tsconfig.json
sveltekit-ts/: .gitignore  README.md  package.json  svelte.config.js  tsconfig.json
sveltekit-ts-tailwind/: .gitignore  README.md  package.json  svelte.config.js  tailwind.config.cjs
tensorflow-devbox/: .env  docker-compose.yml
tunnel/: Dockerfile  README.md  config.yml  ddclient.conf  main.py  nginx.conf  provision.sh
tunnel-cert/: README.md  config.yml  main.py
vagrant/: Vagrantfile
vanilla-ts/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
vikunja/: .env  README.md  docker-compose.yml
wireguard-server/: README.md  (+1 more)
(+117 files in other folders)
