# buildifier: disable=module-docstring
module(name = "dummy")

bazel_dep(name = "gazelle", version = "0.39.1")

# C++

bazel_dep(name = "abseil-cpp", repo_name = "com_google_absl", version = "20240116.2")

# go

bazel_dep(name = "rules_go", repo_name = "io_bazel_rules_go", version = "0.50.1")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.3")
go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_go_chi_chi_v5", "com_github_go_chi_cors", "org_golang_google_grpc")

# python

bazel_dep(name = "rules_python", version = "0.38.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.38.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    ignore_root_user_error = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

bazel_dep(name = "pybind11_bazel", version = "2.13.6")

# protobuf & grpc

bazel_dep(name = "rules_proto", version = "6.0.2")

bazel_dep(name = "rules_proto_grpc_cpp", version = "5.0.0")
bazel_dep(name = "rules_proto_grpc_go", version = "5.0.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.0.0")
