load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gen_go",
    srcs = [
        "calculator.pb.go",
        "calculator_grpc.pb.go",
    ],
    importpath = "dummy.mofu.dev/protos/gen_go",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
